# rag-playground

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  README.md  config.py  ehancement.md  pyproject.toml  requirements.txt
.cursor/rules/: document-rule.mdc  python-typing-conventions.mdc
app/: main.py
data/: download_faq.py  preprocess.py
data/eval/: retrieval_eval.example.jsonl
docs/: config.md
docs/app/: main.md
docs/data/: download_faq.md  preprocess.md
docs/evaluation/: __init__.md  cli.md  retrieval_dataset.md  retrieval_metrics.md  retrieval_report.md  retrieval_runner.md
docs/ingest/: __init__.md  embed.md  index.md
docs/retrieval/: __init__.md  rag.md  search.md  utils.md
docs/tests/: test_retrieval_eval_thresholds.md
evaluation/: __init__.py  cli.py  retrieval_dataset.py  retrieval_metrics.py  retrieval_report.py  retrieval_runner.py
ingest/: __init__.py  embed.py  index.py
retrieval/: __init__.py  rag.py  search.py  utils.py
tests/: test_retrieval_eval_thresholds.py
