[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-playground"
version = "0.1.0"
description = "Mental Health FAQ RAG System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "openai",
    "chromadb",
    "python-dotenv",
    "pandas",
    "kaggle",
    "streamlit",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
]

[tool.setuptools]
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "data*", "ingest*", "retrieval*", "evaluation*"]

